@@ -31,18 +31,18 @@
  * therefore we choose return type void here. Generic pointer is expected
  * to be in (WREG, PRODL, FSR0L), so function arguments are void, too */
 
-extern POSTINC0;
-extern INDF0;
-extern FSR0L;
-extern FSR0H;
-extern WREG;
-extern TBLPTRL;
-extern TBLPTRH;
-extern TBLPTRU;
-extern TABLAT;
-extern PRODL;
-extern PRODH;
-extern __eeprom_gptrget4;
+extern int POSTINC0;
+extern int INDF0;
+extern int FSR0L;
+extern int FSR0H;
+extern int WREG;
+extern int TBLPTRL;
+extern int TBLPTRH;
+extern int TBLPTRU;
+extern int TABLAT;
+extern int PRODL;
+extern int PRODH;
+extern int __eeprom_gptrget4;
 
 void _gptrget4(void) __naked
 {
